--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,11 @@
 
   <title>my_app</title>
   <link rel="manifest" href="manifest.json">
+
+  <!-- Google Maps JavaScript API -->
+  <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7uagVuxiaVmI8YTCyd_ZwB00kxIDliGM&libraries=geometry,places">
+  </script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
